turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: type mismatch;
 found   : Int
 required: String
			printf(colorId);
                               ^